<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@drawable/rectangle">

        <ImageView
            android:id="@+id/image_pill_recycler"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/pill"
            android:layout_marginTop="3dp"
            android:layout_marginStart="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_recycler_med"
            android:layout_toEndOf="@+id/image_pill_recycler"
            android:layout_marginLeft="8dp"
            android:text="@string/acamol"
            android:textSize="25dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mg_recycler"
            android:layout_below="@+id/name_recycler_med"
            android:layout_alignStart="@+id/name_recycler_med"
            android:text="@string/mg_text_recycler"
            android:textSize="20dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reminders_recycler"
            android:layout_below="@+id/name_recycler_med"
            android:layout_toEndOf="@+id/mg_recycler"
            android:layout_marginLeft="15dp"
            android:text="@string/reminders_text_recycler"
            android:textSize="20dp"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btn_remove_med_recycler"
            android:background="@drawable/ic_delete"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@+id/reminders_recycler"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>