<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedifriendFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/medifriend_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="@string/medifriend_title"
            android:textColor="@color/myblue"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/medifriend_description"
            android:text="@string/medifriend_description"
            android:layout_below="@+id/medifriend_title"
            android:padding="8dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"/>

       <android.support.v7.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/card_view"
           android:layout_below="@+id/medifriend_description"
           android:padding="8dp"
           android:layout_marginEnd="10dp"
           android:layout_marginStart="10dp" >

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/rectangle">

               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:id="@+id/person_card"
                   android:src="@drawable/ic_person"
                   android:layout_marginTop="15dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/name_card"
                   android:text="@string/dad"
                   android:textSize="26dp"
                   android:padding="8dp"
                   android:layout_toEndOf="@+id/person_card"
                   android:layout_marginTop="8dp"
                   android:layout_marginLeft="8dp"/>

               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:id="@+id/phone_image_card"
                   android:src="@drawable/ic_phone"
                   android:layout_below="@+id/person_card"
                   android:layout_marginTop="25dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/phone_card"
                   android:textSize="26dp"
                   android:layout_below="@+id/name_card"
                   android:layout_toEndOf="@+id/phone_image_card"
                   android:layout_marginLeft="8dp"
                   android:text="123456789"
                   android:layout_marginTop="12dp"
                   android:padding="8dp"/>

               <Button
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:id="@+id/delete_medifriend"
                   android:background="@drawable/ic_delete"
                   android:layout_alignParentEnd="true" />

           </RelativeLayout>

       </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_add_medifriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="32dp" />

    </RelativeLayout>

</FrameLayout>